--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ Read More
 </div>
 </div>
 <div class="text-center mt-12">
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/154f44a0-2593-43f2-a123-1a40157146f8" data-readdy="true" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
+<a href="articles.html" data-readdy="true" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
 View All Articles
 <div class="w-5 h-5 flex items-center justify-center ml-2">
 <i class="ri-arrow-right-line"></i>
