--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ View Case Study
 </div>
 </div>
 <div class="text-center mt-12">
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/50b44763-a062-47ee-915d-bd58fd4c15c3" data-readdy="true" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
+<a href="projects.html" data-readdy="true" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
 View All Projects
 <div class="w-5 h-5 flex items-center justify-center ml-2">
 <i class="ri-arrow-right-line"></i>
