--- a/projects.html
+++ b/projects.html
@@ -178,13 +178,13 @@ input:checked + .toggle-slider:before {
 </a>
 <!-- Desktop Navigation -->
 <nav class="hidden md:flex items-center space-x-8">
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Home</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#about" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">About</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#portfolio" data-readdy="true" class="nav-link active text-primary transition-colors">Portfolio</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#experience" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Experience</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#services" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Services</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#blog" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Blog</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#contact" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Contact</a>
+<a href="index.html" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Home</a>
+<a href="index.html" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">About</a>
+<a href="index.html" data-readdy="true" class="nav-link active text-primary transition-colors">Portfolio</a>
+<a href="index.html" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Experience</a>
+<a href="index.html" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Services</a>
+<a href="index.html" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Blog</a>
+<a href="index.html" data-readdy="true" class="nav-link text-gray-800 hover:text-primary transition-colors">Contact</a>
 </nav>
 <div class="flex items-center space-x-4">
 <div class="hidden sm:flex items-center">
@@ -204,13 +204,13 @@ input:checked + .toggle-slider:before {
 <!-- Mobile Navigation (Hidden by default) -->
 <div class="hidden bg-white px-4 py-3 shadow-lg md:hidden" id="mobile-menu">
 <div class="flex flex-col space-y-3">
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Home</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#about" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">About</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#portfolio" data-readdy="true" class="text-primary py-2 transition-colors">Portfolio</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#experience" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Experience</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#services" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Services</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#blog" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Blog</a>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#contact" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Contact</a>
+<a href="index.html" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Home</a>
+<a href="index.html" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">About</a>
+<a href="index.html" data-readdy="true" class="text-primary py-2 transition-colors">Portfolio</a>
+<a href="index.html" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Experience</a>
+<a href="index.html" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Services</a>
+<a href="index.html" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Blog</a>
+<a href="index.html" data-readdy="true" class="text-gray-800 hover:text-primary py-2 transition-colors">Contact</a>
 <div class="flex items-center py-2">
 <span class="mr-2 text-sm text-gray-600">Light</span>
 <label class="toggle-switch">
