--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,7 @@ input:checked + .toggle-slider:before {
 <!-- Header -->
 <header class="fixed w-full bg-white shadow-sm z-50 transition-all duration-300" id="navbar">
 <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary flex items-center">
+<a href="index.html" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary flex items-center">
 <span class="text-primary">Meshack</span>
 <span class="text-accent ml-1 hidden sm:inline">Kipchumba</span>
 </a>
