--- a/projects.html
+++ b/projects.html
@@ -228,7 +228,7 @@ input:checked + .toggle-slider:before {
 <div class="container mx-auto px-4">
 <div class="flex flex-col md:flex-row items-center justify-between">
 <div>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="inline-flex items-center text-primary hover:text-primary/80 mb-4 transition-colors">
+<a href="index.html" data-readdy="true" class="inline-flex items-center text-primary hover:text-primary/80 mb-4 transition-colors">
 <div class="w-5 h-5 flex items-center justify-center mr-2">
 <i class="ri-arrow-left-line"></i>
 </div>
