--- a/articles.html
+++ b/articles.html
@@ -37,11 +37,11 @@
             <a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary">Meshack</a>
             
             <nav class="hidden md:flex items-center space-x-8">
-                <a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-gray-600 hover:text-primary transition">Home</a>
-                <a href="#" class="text-primary font-medium">Blog</a>
-                <a href="#" class="text-gray-600 hover:text-primary transition">Portfolio</a>
-                <a href="#" class="text-gray-600 hover:text-primary transition">About</a>
-                <a href="#" class="text-gray-600 hover:text-primary transition">Contact</a>
+                <a href="index.html" data-readdy="true" class="text-gray-600 hover:text-primary transition">Home</a>
+                <a href="index.html" class="text-primary font-medium">Blog</a>
+                <a href="index.html" class="text-gray-600 hover:text-primary transition">Portfolio</a>
+                <a href="index.html" class="text-gray-600 hover:text-primary transition">About</a>
+                <a href="index.html" class="text-gray-600 hover:text-primary transition">Contact</a>
             </nav>
             
             <div class="flex items-center space-x-4">
@@ -60,7 +60,7 @@
     <section class="bg-white border-b">
         <div class="container mx-auto px-4 py-12">
             <div class="flex items-center mb-4">
-                <a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="flex items-center text-gray-600 hover:text-primary transition">
+                <a href="index.html" data-readdy="true" class="flex items-center text-gray-600 hover:text-primary transition">
                     <i class="ri-arrow-left-line mr-2"></i>
                     <span>Back to Home</span>
                 </a>
