--- a/articles.html
+++ b/articles.html
@@ -357,11 +357,11 @@
                 <div>
                     <h3 class="text-lg font-semibold text-gray-900 mb-4">Quick Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-gray-600 hover:text-primary transition">Home</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-primary transition">About Me</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-primary transition">Portfolio</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-primary transition">Services</a></li>
-                        <li><a href="#" class="text-gray-600 hover:text-primary transition">Contact</a></li>
+                        <li><a href="index.html" data-readdy="true" class="text-gray-600 hover:text-primary transition">Home</a></li>
+                        <li><a href="index.html" class="text-gray-600 hover:text-primary transition">About Me</a></li>
+                        <li><a href="index.html" class="text-gray-600 hover:text-primary transition">Portfolio</a></li>
+                        <li><a href="index.html" class="text-gray-600 hover:text-primary transition">Services</a></li>
+                        <li><a href="index.html" class="text-gray-600 hover:text-primary transition">Contact</a></li>
                     </ul>
                 </div>
                 
