--- a/index.html
+++ b/index.html
@@ -282,6 +282,26 @@ visibility: visible;
 min-height: 70vh;
 }
 }
+  header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 1000;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+body {
+  padding-top: 60px;
+}
+
+body.dark-mode header {
+  background-color: #1f2937 !important;
+  height: 60px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+}
 </style>
 </head>
 <body class="light-mode">
