--- a/index.html
+++ b/index.html
@@ -281,16 +281,17 @@ visibility: visible;
 .hero-section {
 min-height: 70vh;
 }
-}
-  header {
+header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 60px;
   z-index: 1000;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.2); /* semi-transparent */
+  backdrop-filter: blur(10px); /* glass effect */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 body {
@@ -298,9 +299,11 @@ body {
 }
 
 body.dark-mode header {
-  background-color: #1f2937 !important;
-  height: 60px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  background-color: rgba(31, 41, 55, 0.2) !important;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
 }
 </style>
 </head>
