--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ width: 0;
 height: 2px;
 bottom: -4px;
 left: 0;
-background-color: #4338ca;
+background-color: rgba(255, 255, 255, 0.2);
 transition: width 0.3s ease;
 }
 .nav-link:hover::after {
