--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ header {
   width: 100%;
   height: 60px;
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.2); /* semi-transparent */
+  background-color: rgba(255, 255, 255, 0.2); /* semi-transparent white */
   backdrop-filter: blur(10px); /* glass effect */
   -webkit-backdrop-filter: blur(10px); /* Safari support */
   border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* subtle border */
@@ -297,6 +297,8 @@ header {
 
 body {
   padding-top: 60px; /* Prevent content from hiding behind header */
+  background: url('your-background-image.jpg') no-repeat center center fixed; /* Make sure the body has a visible background */
+  background-size: cover; /* Make sure the background covers the full page */
 }
 
 /* Dark mode */
@@ -305,7 +307,7 @@ body.dark-mode header {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* subtle border in dark mode */
-}
+  }
 </head>
 <body class="light-mode">
 <!-- Header -->
