--- a/index.html
+++ b/index.html
@@ -282,6 +282,32 @@ visibility: visible;
 min-height: 70vh;
 }
 }
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.2); /* semi-transparent white */
+  backdrop-filter: blur(10px); /* glass effect */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* subtle border */
+}
+
+body {
+  padding-top: 60px; /* Prevent content from hiding behind header */
+  background: url('your-background-image.jpg') no-repeat center center fixed; /* Make sure the body has a visible background */
+  background-size: cover; /* Make sure the background covers the full page */
+}
+
+/* Dark mode */
+body.dark-mode header {
+  background-color: rgba(31, 41, 55, 0.2) !important; /* Dark mode transparency */
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* subtle border in dark mode */
+}
 </style>
 </head>
 <body class="light-mode">
