--- a/index.html
+++ b/index.html
@@ -128,20 +128,41 @@ height: 100%;
 background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.2) 100%);
 }
 .nav-link {
-position: relative;
+  position: relative;
 }
+
+/* Underline effect */
 .nav-link::after {
-content: '';
-position: absolute;
-width: 0;
-height: 2px;
-bottom: -4px;
-left: 0;
-background-color: rgba(255, 255, 255, 0.2);
-transition: width 0.3s ease;
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -4px;
+  left: 0;
+  background-color: #4338ca;
+  transition: width 0.3s ease;
 }
+
 .nav-link:hover::after {
-width: 100%;
+  width: 100%;
+}
+
+/* Glass effect for mobile only */
+@media (max-width: 768px) {
+  .nav-link {
+    padding: 8px 12px;
+    color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+    background-color: rgba(255, 255, 255, 0.08);
+    border-radius: 8px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+
+  .nav-link:hover {
+    background-color: rgba(255, 255, 255, 0.12);
+    color: #fff;
+  }
 }
 .active::after {
 width: 100%;
