--- a/index.html
+++ b/index.html
@@ -502,11 +502,11 @@ body.dark-mode header {
 </div>
 </div>
 <div class="flex flex-wrap gap-4">
-<a href="#" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
+<a href="Professional Modern CV Resume_20250313_123249_0000.pdf" class="inline-flex items-center bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
 <div class="w-5 h-5 flex items-center justify-center mr-2">
 <i class="ri-download-line"></i>
 </div>
-Download CV
+View CV
 </a>
 <a href="#contact" class="inline-flex items-center bg-accent hover:bg-accent/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
 <div class="w-5 h-5 flex items-center justify-center mr-2">
