--- a/projects.html
+++ b/projects.html
@@ -614,7 +614,7 @@ Reset Filters
 <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">Have a project in mind?</h2>
 <p class="text-gray-700">Let's collaborate and create something amazing together. I'm available for freelance work in journalism, media, and graphic design.</p>
 </div>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417#contact" data-readdy="true" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap flex items-center">
+<a href="index.html#contact" data-readdy="true" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap flex items-center">
 <div class="w-5 h-5 flex items-center justify-center mr-2">
 <i class="ri-mail-line"></i>
 </div>
@@ -629,7 +629,7 @@ Contact Me
 <div class="container mx-auto px-4">
 <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-8">
 <div>
-<a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-2xl font-['Pacifico'] text-white mb-4 inline-block">Meshack</a>
+<a href="index.html" data-readdy="true" class="text-2xl font-['Pacifico'] text-white mb-4 inline-block">Meshack</a>
 <p class="text-gray-400 mb-6">Journalist, Media Expert & Graphic Designer dedicated to storytelling and visual creativity.</p>
 <div class="flex space-x-4">
 <a href="#" class="text-gray-400 hover:text-white transition-colors">
