--- a/index.html
+++ b/index.html
@@ -396,7 +396,9 @@ body.dark-mode header {
 <div class="animate-fade-in-down">
 <span class="inline-block px-4 py-2 bg-accent text-white rounded-full text-sm font-medium mb-4 animate-pulse">Available for freelance work</span>
 <h1 class="text-5xl md:text-6xl font-bold mb-4">Hi, I'm <span class="text-accent">Meshack Kipchumba</span></h1>
-<p class="text-xl md:text-2xl mb-8">A journalist, media expert, and graphic designer dedicated to storytelling and visual creativity.</p>
+<div class="typing-container">
+  <span id="typed-text"></span><span class="cursor">|</span>
+</div>
 <div class="flex flex-wrap gap-4">
 <a href="#portfolio" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 !rounded-button font-medium transition-colors whitespace-nowrap flex items-center">
 <i class="ri-gallery-line mr-2"></i> View Portfolio
