--- a/articles.html
+++ b/articles.html
@@ -336,7 +336,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary">Meshack</a>
+                    <a href="index.html" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary">Meshack</a>
                     <p class="mt-4 text-gray-600">Journalist, Media Expert, and Graphic Designer passionate about storytelling and visual communication.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-gray-100 text-gray-600 hover:bg-primary hover:text-white transition">
