--- a/articles.html
+++ b/articles.html
@@ -34,7 +34,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="https://readdy.ai/home/29ad1170-30c7-4601-9c32-c827670146e4/cfe2e9f3-e808-40b4-9036-9fae3d599417" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary">Meshack</a>
+            <a href="index.html" data-readdy="true" class="text-2xl font-['Pacifico'] text-primary">Meshack</a>
             
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="index.html" data-readdy="true" class="text-gray-600 hover:text-primary transition">Home</a>
