--- a/index.html
+++ b/index.html
@@ -350,9 +350,39 @@ body.dark-mode header {
   0%, 50%, 100% { opacity: 1; }
   25%, 75% { opacity: 0; }
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+}
+
+.container {
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+}
+
+.slide {
+  scroll-snap-align: start;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  background: #f5f5f5;
+  border-bottom: 1px solid #ccc;
+}
 </style>
 </head>
 <body class="light-mode">
+  <div class="container">
+    <section class="slide" id="home">Home</section>
+    <section class="slide" id="about">About</section>
+    <section class="slide" id="projects">Projects</section>
+    <section class="slide" id="contact">Contact</section>
+  </div>
 <!-- Header -->
 <header class="fixed w-full bg-white shadow-sm z-50 transition-all duration-300" id="navbar">
 <div class="container mx-auto px-4 py-3 flex justify-between items-center">
